# cc-resume

./: .gitignore  README.md  requirements.txt  setup.cfg
cc_resume/: __init__.py  cmd.py  config.py  main.py  utils.py
cc_resume/resumes/: author.yaml
doc/: my_dev.md
